started to add some comments

--- a/code/main.ipynb
+++ b/code/main.ipynb
@@ -2223,6 +2223,27 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The idea is to assign a similarity score to each documment that has all the words ewe are searching following the formula:\n",
+    "\n",
+    "$\\displaystyle \\sum_{i=0}^n \\frac{q_i*pi}{di} $ \n",
+    "\n",
+    "where:\n",
+    "* $qi$= *len query in the i-th fielfd*\n",
+    "* $di$= *len document in the i-th field*\n",
+    "* $pi$= *weight of i-th field of he search*\n",
+    "\n",
+    "Obviously, fields such as title are more important than synopsis which might be a very long description: the user is able to find relevant results just by writing one word of the title or one main character.\n",
+    "The score is upper-bounded by 1. Nevertheless, it is almost impossible to reach this score since the user should write all the right informations in the appropriate field.\n",
+    "\n",
+    "Since,commonly, the query are very short, this method assures good results.\n",
+    "\n",
+    "Comparing our scoring function with the previous one, they both share their range between O and 1 but tf idf scoring function reaches more easily values towards 1.\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -3468,7 +3489,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.11"
+   "version": "3.8.12"
   }
  },
  "nbformat": 4,
