--- a/code/main.ipynb
+++ b/code/main.ipynb
@@ -612,7 +612,9 @@
     "\n",
     "Since it's a conjunctive query (AND), the results – if any – will be the animes whose synopsis contains **all** the terms in the query.\n",
     "\n",
-    "If the search is successful (at least one result), the function `get_df_entries` will print out a table with the titles of the animes that were found, their synopsis and the URLs to their respective MyAnimeList pages."
+    "If the search is successful (at least one result), the function `get_df_entries` will print out a table with the titles of the animes that were found, their synopsis and the URLs to their respective MyAnimeList pages.\n",
+    "\n",
+    "For instance, let's search for `volleyball high school tournament`:"
    ]
   },
   {
@@ -2155,10 +2157,11 @@
    "outputs": [],
    "source": [
     "def recursive_algo(arr):\n",
-    "    if len(arr)<2:\n",
+    "    \n",
+    "    if len(arr) < 2:\n",
     "        return arr\n",
     "\n",
-    "    return(max(recursive_algo(arr[1:]), [arr[0]] + recursive_algo(arr[2:]), key=sum))\n",
+    "    return(max(recursive_algo(arr[1:]), [arr[0]] + recursive_algo(arr[2:]), key = sum))\n",
     "\n",
     "#recursive_algo(caso_limite)"
    ]
@@ -2173,49 +2176,58 @@
     "    '''\n",
     "    find the max sum of elements that are not consecutive\n",
     "    '''\n",
-    "    a=0\n",
-    "    b=array[0]\n",
-    "    original=[(array[0],0)]\n",
-    "    step=[(array[0],0)]\n",
-    "    index=1\n",
-    "    for elem in array[1:]:\n",
-    "        original.append((elem,index))\n",
-    "        n=max(a+elem,b)\n",
-    "        if a+elem>b:\n",
-    "            step.append((elem,index))\n",
-    "        index+=1\n",
-    "        a=b\n",
-    "        b=n\n",
-    "\n",
     "    \n",
-    "    return b,step,original\n",
+    "    a = 0\n",
+    "    b = array[0]\n",
+    "    original = [(array[0], 0)]\n",
+    "    step = [(array[0], 0)]\n",
+    "    index = 1\n",
+    "    \n",
+    "    for elem in array[1:]:\n",
+    "        \n",
+    "        original.append((elem, index))\n",
+    "        \n",
+    "        n = max(a + elem, b)\n",
+    "        \n",
+    "        if a + elem > b:\n",
+    "            step.append((elem, index))\n",
+    "            \n",
+    "        index += 1\n",
+    "        a = b\n",
+    "        b = n\n",
+    "  \n",
+    "    return b, step, original\n",
     "\n",
-    "def eliminate_consecutive(step,original):\n",
+    "\n",
+    "def eliminate_consecutive(step, original):\n",
     "    '''\n",
     "    eliminate the element from step which are consecutive in the original array\n",
     "    '''\n",
-    "    i=0\n",
-    "    condizione=len(step)\n",
-    "\n",
     "    \n",
-    "    while -i<condizione:\n",
-    "        j=step[i-1][1]\n",
-    "\n",
-    "        if (step[i-1][1]!=0 ):   \n",
-    "            if (step[i-2]==original[j-1]):\n",
-    "                step.pop(i-2)\n",
-    "\n",
-    "        condizione=len(step)\n",
-    "        i-=1\n",
+    "    i = 0\n",
+    "    condition = len(step)\n",
+    "    \n",
+    "    while -i < condition:\n",
     "        \n",
-    "    step=[x[0] for x in step]\n",
+    "        j = step[i - 1][1]\n",
+    "\n",
+    "        if (step[i - 1][1] != 0):   \n",
+    "            if (step[i - 2] == original[j - 1]):\n",
+    "                step.pop(i - 2)\n",
+    "\n",
+    "        condition = len(step)\n",
+    "        i -= 1\n",
+    "        \n",
+    "    step = [x[0] for x in step]\n",
     "    return step\n",
     "    \n",
     "\n",
-    "def solutione(array):\n",
-    "    b,step,original=find_max_sum(array)\n",
-    "    step=eliminate_consecutive(step,original)\n",
-    "    return step\n"
+    "def solution(array):\n",
+    "    \n",
+    "    b, step, original = find_max_sum(array)\n",
+    "    step = eliminate_consecutive(step, original)\n",
+    "    \n",
+    "    return step"
    ]
   },
   {
@@ -2225,10 +2237,13 @@
    "outputs": [],
    "source": [
     "import random\n",
+    "\n",
     "for i in range(1000):\n",
-    "     k=random.randint(5,20)\n",
-    "     array=[random.randint(1,20) for _ in range(k)]\n",
-    "     assert sum(recursive_algo(array))==sum(solutione(array)),f\"errore nel array {i} {array}\""
+    "    \n",
+    "    k = random.randint(5, 20)\n",
+    "    array = [random.randint(1, 20) for _ in range(k)]\n",
+    "    \n",
+    "    assert sum(recursive_algo(array)) == sum(solution(array)), f\"errore nell'array {i} {array}\""
    ]
   },
   {
@@ -2248,7 +2263,7 @@
     }
    ],
    "source": [
-    "solutione([40,50,40,40,40])"
+    "solution([40, 50, 40, 40, 40])"
    ]
   }
  ],
